# hf_ai_agents

./: .gitignore  pyproject.toml
prompts/: first_agent.yaml
src/hf_ai_agents/: first_agent.py  party.py
