[project]
name = "hf-ai-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Wacławczyk",email = "p.a.waclawczyk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "hf_ai_agents", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
