[project]
name = "hf-ai-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Wacławczyk",email = "p.a.waclawczyk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "smolagents[gradio] (>=1.14.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "hf_ai_agents", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
